<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.and.wodness.CustomButton
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/modify_back_btn"

                android:textSize="@dimen/recover_back_button_textsize"
                android:id="@+id/modify_back_btn"
                android:background="@android:color/transparent"/>

            <com.and.wodness.CustomTextView
                android:id="@+id/customTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/modify_password_str"
                android:textColor="@android:color/black"
                android:textSize="@dimen/recover_title_textsize" />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:paddingTop="@dimen/recover_line_padding_top"
            android:layout_marginLeft="@dimen/recover_back_button_textsize"
            android:layout_marginRight="@dimen/recover_back_button_textsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.and.wodness.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modify_password_new_edittext"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/new_password_hint_str"
                android:textColorHint="@color/edittext_color_light_blue"
                android:background="@drawable/edt_bg_selector"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_marginBottom="13dp"
                />
            <com.and.wodness.CustomEditText
                android:layout_marginTop="60dp"
                android:id="@+id/modify_password_confirm_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg_selector"
                android:hint="@string/modify_password_confirm_hint_str"
                android:singleLine="true"
                android:textColorHint="@color/edittext_color_light_blue" />
            <com.and.wodness.CustomButton
                android:layout_marginTop="@dimen/joinus_line_padding_bottom_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/create_an_account"
                android:text="@string/modify_password_btn"
                android:id="@+id/modify_save_btn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/recover_reset_pwd_textsize"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
