<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:baselineAligned="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <com.and.wodness.CustomButton
            android:id="@+id/recover_back_button"
            android:layout_width="10dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/back_img_button" />

        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="P R E M I U M  S U B S C R I P T I O N"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:orientation="vertical"
        android:weightSum="2"
        android:baselineAligned="false"
        android:layout_marginTop="35dp"
        android:paddingLeft="1dp"
        >
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/premium_custom_strength_title_str"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="#18c6ff"
            android:textSize="@dimen/custom_strenght"
            android:background="@color/colorWhite"
            />
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/premium_custom_strength_text"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/custom_strenght_text"
            android:background="@color/colorWhite"
            android:paddingTop="19dp"
            android:paddingBottom="2dp"
            />
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/premium_log_title_str"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="#18c6ff"
            android:textSize="@dimen/custom_strenght"
            android:background="@color/colorWhite"
            android:layout_marginTop="15dp"
            />
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/premium_log_text"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/custom_strenght_text"
            android:background="@color/colorWhite"
            android:paddingTop="19dp"
            android:paddingBottom="2dp"
            />
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/premium_coach_title_str"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textColor="#18c6ff"
            android:textSize="@dimen/custom_strenght"
            android:background="@color/colorWhite"
            android:layout_marginTop="15dp"
            />
        <com.and.wodness.CustomTextView
            android:id="@+id/customTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/premium_coach_text"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/custom_strenght_text"
            android:background="@color/colorWhite"
            android:paddingTop="19dp"
            android:paddingBottom="2dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="12dp"
        android:background="@color/colorWhite">
        <com.and.wodness.CustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/create_an_account"
            android:text="C A N C E L  Y O U R  M E M B E R S H I P"
            android:id="@+id/recover_reset_password_button"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>


</RelativeLayout>